D8CORE-3154: fixing the heading spacing on people

--- a/src/scss/theme/_events.scss
+++ b/src/scss/theme/_events.scss
@@ -273,11 +273,3 @@
     margin-top: 0;
   }
 }
-
-.section-bgcolor--title {
-  @include modular-spacing('padding', 6 null 6 null);
-
-  h1 {
-    margin: 0;
-  }
-}
